<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddAndRemoveProductActivity">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:padding="@dimen/edit_linear_layout_eight_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_name_label"/>

        <EditText
            android:inputType="text"
            android:id="@+id/edit_product_name_id"
            android:layout_weight="1"
            android:hint="@string/edit_product_name_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/edit_linear_layout_eight_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_price_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <EditText
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_price_hint"
            android:id="@+id/edit_product_price_id"/>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/edit_linear_layout_eight_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_quantity_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <Button
            android:tag="@string/edit_product_decrease_quantity_button_tag"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/edit_product_decrease_quantity_button"
            android:background="@color/colorAccent"
            android:id="@+id/edit_product_decrease_quantity"/>

        <EditText
            android:layout_weight="2"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_quantity_hint"
            android:id="@+id/edit_product_quantity_id"/>

        <Button
            android:tag="@string/edit_product_increase_quantity_button_tag"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/edit_product_increase_quantity_button"
            android:id="@+id/edit_product_increase_quantity"/>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/edit_linear_layout_eight_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_supplier_name_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <EditText
            android:inputType="text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_supplier_name_hint"
            android:id="@+id/edit_product_supplier_name_id"/>
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/edit_linear_layout_eight_padding"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_product_supplier_phone_number_label"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <EditText
            android:inputType="phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_product_supplier_phone_number_hint"
            android:id="@+id/edit_product_supplier_phone_number_id"/>
    </LinearLayout>
</LinearLayout>